v 0.2.3 Add Mavigation model when send to exercise

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -50,3 +50,4 @@ submit#:#Submit
 re_submit#:#Re-Submit
 submitted#:#Submitted
 submit_success#:#Your submission is saved.
+save_on_navigation#:#Do you Want to Send Content to Exercise?
