--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -50,3 +50,4 @@ submit#:#Einreichen
 re_submit#:#Einreichung aktualisieren
 submitted#:#Eingereicht
 submit_success#:#Ihre Einreichung wurde übernommen.
+save_on_navigation#:#Möchten Sie Ihre Eingabe zur Bewertung einreichen?
