--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -50,4 +50,4 @@ submit#:#Submit
 re_submit#:#Re-Submit
 submitted#:#Submitted
 submit_success#:#Your submission is saved.
-save_on_navigation#:#Do you Want to Send Content to Exercise?
+save_on_navigation#:#Do you want to send your input for being assessed?
